--- a/WebContent/partials/login.html
+++ b/WebContent/partials/login.html
@@ -20,6 +20,10 @@
                         <input type="hidden" name="save" value="contact">
                         <button type="submit" class="btn btn-primary" ng-click="login(user)" >Login</button>
                     </div>
+                    <div class="form-group col-lg-12">
+                        <input type="hidden" name="save" value="contact">
+                        <button class="btn btn-info" ng-click="logout()" >Logout</button>
+                    </div>
                 </div>
             </form>
         </div>
