update login auth

--- a/WebContent/views/pages/login.html
+++ b/WebContent/views/pages/login.html
@@ -3,24 +3,28 @@
         <div class="col-md-6 col-md-offset-3">
             <div class="login-panel panel panel-default">
                 <div class="panel-heading">
-                    <h3 class="panel-title">Please Sign In</h3>
+                    <h3 class="panel-title">Application log in</h3>
                 </div>
                 <div class="panel-body">
-                    <form role="form">
+                    <form role="form" name="form">
                         <fieldset>
-                            <div class="form-group">
-                                <input class="form-control" placeholder="E-mail" name="email" type="email" autofocus>
+                        	<div class="alert alert-danger" ng-show="notAuthenticated">
+								{{errorMessage}}</div>
+								
+                            <div class="form-group input-group">
+                            	<span class="input-group-addon"><i class="fa fa-user"></i></span> 
+                                <input class="form-control" placeholder="User Name"	name="username" type="text" ng-model="user.username" autofocus	required />
                             </div>
-                            <div class="form-group">
-                                <input class="form-control" placeholder="Password" name="password" type="password" value="">
-                            </div>
-                            <div class="checkbox">
-                                <label>
-                                    <input name="remember" type="checkbox" value="Remember Me">Remember Me
-                                </label>
-                            </div>
-                            <!-- Change this to a button or input when using this as a form -->
-                            <a ui-sref="dashboard.home" class="btn btn-lg btn-success btn-block">Login</a>
+                            <div class="form-group input-group">
+                                <span class="input-group-addon"><i class="fa fa-lock"></i></span>
+                                <input class="form-control" placeholder="Password" name="password" type="password" ng-model="user.password"	required>
+                            </div>                            
+                                                        
+                            <button class="btn btn-lg btn-success btn-block" type="submit"
+								ng-disabled="loading() || form.$invalid"
+								ng-click="login(user)">
+								Login <i class="fa fa-spinner fa-spin" ng-show="loading()"></i>
+							</button>
                         </fieldset>
                     </form>
                 </div>
